# Qt_calculator

./: CMakeLists.txt  README.md  calculator.cpp  calculator.h  calculator2.cpp  calculatorwindow.cpp  calculatorwindow.h  head.cpp  head.h  helper.h  helper2.h  main.cpp  progression_main.cpp  secondwindow.cpp  window.h
.github/workflows/: qodana_code_quality.yml
Others/: progression_dop.h
ProgramFiles/: calculatorwindow.cpp  calculatorwindow.h
Progressions/: arithmetic_progression.cpp  arithmetic_progression.h  geometric_progression.cpp  geometric_progression.h  secondwindow.cpp  secondwindow.h
new/: calculatorwindow.cpp  calculatorwindow.h  head.cpp  head.h  main.cpp  resources.qrc
styles/: calculator.qss  resources.qrc
